--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/camera": "^4.10.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/document-viewer": "^4.10.0",
+    "@ionic-native/network": "^4.10.1",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/pro": "1.0.20",
@@ -36,6 +37,7 @@
     "cordova-plugin-document-viewer": "^0.9.10",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.2.0",
@@ -58,7 +60,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-document-viewer": {}
+      "cordova-plugin-document-viewer": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "ios",
