--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/camera": "^4.10.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/document-viewer": "^4.10.0",
+    "@ionic-native/file": "^4.12.2",
     "@ionic-native/network": "^4.10.1",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
@@ -31,10 +32,11 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.11",
     "cordova-android": "~7.0.0",
-    "cordova-ios": "~4.5.4",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-document-viewer": "^0.9.10",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-network-information": "^2.0.1",
@@ -61,7 +63,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-document-viewer": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "ios",
