--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/core": "4.7.0",
     "@ionic-native/document-viewer": "^4.10.0",
     "@ionic-native/file": "^4.12.2",
+    "@ionic-native/firebase": "^4.12.2",
     "@ionic-native/in-app-browser": "^4.12.2",
     "@ionic-native/network": "^4.10.1",
     "@ionic-native/splash-screen": "4.7.0",
@@ -38,6 +39,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-document-viewer": "^0.9.10",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-firebase": "^2.0.0",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
@@ -67,7 +69,8 @@
       "cordova-plugin-document-viewer": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "ios",
