--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/core": "4.7.0",
     "@ionic-native/document-viewer": "^4.10.0",
     "@ionic-native/file": "^4.12.2",
+    "@ionic-native/file-transfer": "^4.2.1",
     "@ionic-native/firebase": "^4.12.2",
     "@ionic-native/in-app-browser": "^4.12.2",
     "@ionic-native/network": "^4.10.1",
@@ -39,6 +40,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-document-viewer": "^0.9.10",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-firebase": "^2.0.0",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -48,7 +50,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.12.1",
     "ionic-angular": "3.9.2",
-    "ionic-image-loader": "^5.1.1",
+    "ionic-image-loader": "^4.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
@@ -71,7 +73,8 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-file": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android",
